# DesignPatterns

DecoratorPattern/: BasicSoup.cpp  BasicSoup.h  CMakeLists.txt  ISoup.h  SoupDecorator.cpp  SoupDecorator.h  SoupWithMeat.cpp  SoupWithMeat.h  SoupWithSalt.cpp  SoupWithSalt.h  SoupWithVegetables.cpp  SoupWithVegetables.h  main.cpp
ObserverPattern/: CMakeLists.txt  main.cpp
ObserverPattern/api/: IObserver.h  Observable.cpp  Observable.h
ObserverPattern/domain/: EastPlayer.cpp  EastPlayer.h  NorthPlayer.cpp  NorthPlayer.h  Playboard.cpp  Playboard.h  SouthPlayer.cpp  SouthPlayer.h  WestPlayer.cpp  WestPlayer.h
